Added some new files

--- a/Group Project/Professional Communication/Buisness Communication.html
+++ b/Group Project/Professional Communication/Buisness Communication.html
@@ -23,9 +23,19 @@
 <body>
     <h1>Why do we need Workplace Communication</h1>
     <div class="Main-content">
-        <p>Communication is neither the transmission of a message nor the message itself. It is the mutual exchange of understanding, originating with the receiver. Communication needs to be effective in business. Communication is the essence of management. The basic functions of management (Planning, Organizing, Staffing, Directing and Controlling) cannot be performed well without effective communication.Business communication involves constant flow of information. Feedback is integral part of business communication. Organizations these days are verly large and involve large number of people.</p>
-        <p> There are various levels of hierarchy in an organization. Greater the number of levels, the more difficult is the job of managing the organization. Communication here plays a very important role in process of directing and controlling the people in the oragnization. Immediate feedback can be obtained and misunderstandings if any can be avoided.</p>
-        <p>There should be effective communication between superiors and subordinated in an organization, between organization and society at large (for example between management and trade unions). It is essential for success and growth of an organization. Communication gaps should not occur in any organization.</p>
+        <p>Communication skills in the workplace include a mix of verbal and non-verbal abilities. Learn more about the importance of communication skills and how you can improve yours.</p>
+
+            Communication involves conveying and receiving information through a range of verbal and non-verbal means. When you deliver a presentation at work, brainstorm with your coworkers, address a problem with your boss, or confirm details with a client about their project, you use communication skills. They're an essential part of developing positive professional relationships.</p>
+
+            While it might seem like communication is mostly talking and listening, there’s more to it than that. Everything from your facial expression to your tone of voice feeds into communication. In this article, we'll go over what communication skills at work look like and discuss ways you can improve your skills to become a more effective communicator.</p>
+
+            Communication is neither the transmission of a message nor the message itself. It is the mutual exchange of understanding, originating with the receiver. Communication needs to be effective in business. Communication is the essence of management.</p>
+            
+            The basic functions of management (Planning, Organizing, Staffing, Directing and Controlling) cannot be performed well without effective communication.Business communication involves constant flow of information. Feedback is integral part of business communication. Organizations these days are verly large and involve large number of people.</p>
+
+            There are various levels of hierarchy in an organization. Greater the number of levels, the more difficult is the job of managing the organization. Communication here plays a very important role in process of directing and controlling the people in the oragnization. Immediate feedback can be obtained and misunderstandings if any can be avoided.</p>
+
+            There should be effective communication between superiors and subordinated in an organization, between organization and society at large (for example between management and trade unions). It is essential for success and growth of an organization. Communication gaps should not occur in any organization.</p>
         <p>
             <ol> 
                 <li>Effective communication in the workplace is crucial for establishing and maintaining quality working relationships in organizations.</li></p>
